# litestar_crud

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml
src/: app.py  config.py  controller.py  pyproject.toml  schemas.py
src/migrations/versions/: 2025-05-11_first_346df13f8fc2.py
